# DNA-Probe-Designer

./: .gitignore  README.md  dev.ipynb  duplex_prob.py  gui.py  pyproject.toml  secondary_structure.py  setup.py  test_setup.py
DNA-Probe-Designer/: dev.ipynb  duplex_prob.py  gui.py
DNAProbeDesigner/: __init__.py  blockParse.py  gui.py  outputClean.py
DNAProbeDesigner/OligoMiner/: blockParse.py
OligoMiner/: outputClean.py  structureCheck.py
data/gui_outputs/: rosa26_probes_pDup_filtered.csv
docs/: component-spec.md  functional-spec.md  spec-notes.txt  test-component-spec.md
examples/: example.md
tests/: test.py  test_duplex_prob.py  test_secondary_structure.py
