[project]
name = "DNAProbeDesigner"
version = "0.0.2"
authors = [
  { name="Nicolas Longhi", email="longnic@uw.edu" },
  { name="Shivesh Ummat", email="summat@uw.edu" }
]
description = "DNA probe design for ISH experiments."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/summat1/DNA-Probe-Designer"